Wed Aug 10 11:44:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Collocation_Exception_Test/Client_Task.cpp:
        * tests/Collocation_Exception_Test/Collocation_Excep_Test.mpc:
          No need to use messaging

Tue Aug  9 19:28:15 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	From J H Choi <jhchoi at sqisoft dot com>
	* tao/TypeCode.cpp (equivalent):

	  Equivalence of two TypeCodes must be done between their
	  unaliased counterparts.  The code was incorrectly leaving one of
	  the TypeCodes aliased in the comparison.

Mon Aug  8 18:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/advanced_resource.cpp:
          Added include of tao/Protocol_Factory.h to not get compile errors
          when all protocols are disabled. Thanks to Arvind S. Krishna
          <arvindk at dre dot vanderbilt dot edu> for reporting this

Mon Aug  8 10:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Collocation_Oneway_Tests/Collocation_Oneway_Tests.mpc:
        * tests/Collocation_Exception_Test/Collocation_Excep_Test.mpc:
          Made projects unique

Mon Aug  8 08:55:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/ImplRepo/nestea_i.cpp:
          Fixed invalid delete

        * tao/PortableServer/Servant_Base.cpp:
          Fixed bug when invoking collocated oneways with SYNC_WITH_SERVER
          is set

        * tests/Collocation_Oneway_Tests/*:
          New test for collocated oneways. Thanks to Vito Bico
          <vbica at qualcomm dot com> for making this test to reproduce
          the bug in Servant_Base.

        * tests/Collocation_Exception_Test/*:
          New test for testing exceptions in collocated case

        * rules.tao.GNU:
          Removed TAO libraries, MPC now handles this.

        * tests/Hello/Hello.mpc:
          Added -St and -Sa as idl flags. This test doesn't need Any